# rmg-ai

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  gitleaks.yml  publish.yml
allen/: __init__.py  agent.py  allie.py  brand_contracts.py  brands.py  briefing.py  chat.py  classify.py  clock.py  config.py  dashboard.py  db.py  docs.py  doppler.py  emotion.py  feed_watch.py  forms.py  google_auth.py  llm.py  main.py  media.py  meeting.py  memory.py  metadata.py  models.py  news.py  presets.json  report.py  rollup.py  scheduler.py  scripts.py  speech.py  tech_accounts.py  token_health.py  tools_anpu.py  tools_calendar.py  tools_cappo.py  tools_clickup.py  tools_constance.py  tools_gdrive.py  (+13 more)
allen/static/: console.html
allie/: __init__.py
infra/: start.sh
tests/: test_namespace_isolation.py
