[project]
name = "rmg-ai"
version = "0.1.0"
description = "RMG AI systems — ALLEN (brand-voice scripting + speech). ALLIE later."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "anthropic>=0.40",
  "requests>=2.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.12",
  "yt-dlp>=2024.1.1",
]

[dependency-groups]
dev = ["pytest>=8", "psycopg2-binary>=2.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
