[project]
name = "rmg-ai"
version = "0.1.0"
description = "RMG AI systems — ALLEN (brand-voice scripting + speech). ALLIE later."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "anthropic>=0.40",
  "requests>=2.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.14.2",
  "python-multipart>=0.0.31",
  "yt-dlp>=2024.1.1",
  "twilio>=9.0",
  "apscheduler>=3.10",
  "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The project isn't installed (tool.uv package = false), so put the repo
# root on sys.path for `from allen import ...` to resolve under pytest.
pythonpath = ["."]

[tool.uv]
package = false
